# cipher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  load.py  setup.cfg  setup.py
.github/workflows/: continuous-integration.yml
cipher/: __init__.py  attack.py  bed_generation.py  evaluate_synthetic.py  explain.py  impress.py  layers.py  load.py  metadata_to_samplefile.py  metrics.py  moana.py  process_multitask.py  process_singletask.py  seq_hdf5.py  train.py  train_single_task.py  tutorial_multitask.ipynb  utils.py
cipher/model_zoo/: __init__.py  cnn_dist.py  cnn_local.py  deepbind.py  deepbind_custom.py  residualbind.py
cipher/preprocess/: __init__.py  encode_utils.py  generate.py  inspect.py  preprocess_wrapper.py  process_singletask.py  singletask.py  tfrecords.py  wrangle.py
docs/: api.rst  conf.py  index.rst
docs/api/: cipher.load.rst  cipher.model_zoo.deepbind.rst  cipher.model_zoo.rst  cipher.preprocess.inspect.rst  cipher.preprocess.multitask.rst  cipher.preprocess.rst  cipher.preprocess.singletask.rst  cipher.preprocess.tfrecords.rst  cipher.preprocess.wrangle.rst  cipher.rst  cipher.utils.rst
docs/user_guide/: index.rst  tutorial_multitask.ipynb
libre/: __init__.py  load.py  metrics.py  utils.py
libre/model_zoo/: __init__.py  cnn_dist.py  cnn_local.py  deepbind_custom.py
model_zoo/: deepbind.py
old/: bed_generation.py
preprocess/: inspect.py  singletask.py  wrangle.py
scripts/: process_multitask.py  process_singletask.py  train.py
tests/: metadata_test.tsv  test_tfrecords.py  test_utils.py  test_wrangle.py
(+9 files in other folders)
