[metadata]
name = cipher
author = Koo Lab
author_email = koo@cshl.edu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
description = Codebase for Koo Lab at CSHL
license = MIT

[options]
python_requires = >=3.6,<4
install_requires =
    h5py
    matplotlib
    numpy
    pandas
    scipy
packages = find:

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest
    pytest-cov
doc =
    ipython
    pydata-sphinx-theme
    nbsphinx
    numpydoc
    sphinx
    sphinxcontrib-apidoc

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
addopts = --cov=cipher --cov-config=setup.cfg --verbose
